--- a/TextToImageToAscii/app.config
+++ b/TextToImageToAscii/app.config
@@ -1,12 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<!--
-        Name:     ImposterSyndromeImageSearch
-        Key 1:    2383a354adb5478db99e159e5099a9af
-        Key 2:    5331cf6f5d934931a2efa5793a2e2296
-        -->
-		<add key="BingImageSearch_SubscriptionKey" value="2383a354adb5478db99e159e5099a9af" />
+		<add key="BingImageSearch_SubscriptionKey" value="[REPLACE WITH KEY]" />
 		<!--
         Verify the endpoint URI. If you encounter unexpected authorization errors,
         double-check this value against the Bing search endpoint in your Azure dashboard.
