--- a/TextToImageToAscii/TextToImageToAscii.csproj
+++ b/TextToImageToAscii/TextToImageToAscii.csproj
@@ -43,7 +43,7 @@
     <Compile Include="PixelToCharacterUtility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BingSearch.cs" />
+    <Compile Include="BingImageSearch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
